// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`goes to people when function called Should render personlist page 1 num 1`] = `
<PersonList
  page={1}
/>
`;

exports[`goes to person when function called should render person id 42 string 1`] = `
<Person
  id="42"
/>
`;

exports[`is on main page to start Should render main no props 1`] = `<Main />`;

exports[`is on people page 2 to start Should render personlist page 2 num 1`] = `
<PersonList
  page={2}
/>
`;

exports[`is on person page to start should render person id 100 string 1`] = `
<Person
  id="100"
/>
`;
